# kommunalpolitik-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP.md  convert_municipalities.py  mcp_config.example.json  opencode.json  pyproject.toml  requirements.txt  test_server.py
.amazonq/cli-agents/: kommunalpolitik.json  vibe.json
.github/: pull_request_template.md
.vibe/: .gitignore  architecture.md  conversation.sqlite  development-plan-default.md  development-plan.md
.vibe/docs/: architecture.md
configs/municipalities/: witzenhausen.json
deploy/: docker-compose.example.yml
docs/: agent-runtime.md  deployment.md  development.md  frontend-mvp.md  roadmap.md
evals/: agent_quality.json
specs/: OParl-1.1.html
src/: __init__.py  cli.py  config.py  feedback.py  http_server.py  mcp_server.py  smoke_http.py
src/agent/: __init__.py  core.py  evaluate.py  opencode_runtime.py  providers.py
src/data/: __init__.py  municipalities.json
src/ingest/: __init__.py  pdf_text.py  sessionnet_client.py  sessionnet_parsers.py  sessionnet_repository.py  text_index.py  witzenhausen.py
src/providers/: __init__.py  base_provider.py  oparl_provider.py
src/schemas/: __init__.py  meeting.py  municipality.py
src/tools/: __init__.py  meetings.py  municipalities.py  witzenhausen.py
tests/: test_agent_core.py  test_agent_providers.py  test_feedback_report.py  test_http_agent.py  test_provider_errors.py  test_witzenhausen_search.py
web/frontend/: vite.config.ts
web/frontend/src/: App.css  App.tsx  index.css
