[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kommunalpolitik-mcp"
version = "0.1.0"
description = "Local MCP server and ingestion toolkit for municipal politics documents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Gualter Barbas Baptista", email = "gualter@ecobytes.net" }
]
dependencies = [
  "mcp>=1.0.0",
  "requests>=2.28.0",
  "beautifulsoup4>=4.12.0",
  "pypdf>=4.0.0"
]

[project.scripts]
kommunalpolitik = "src.cli:main"
kommunalpolitik-mcp = "src.mcp_server:run"
kommunalpolitik-ingest-witzenhausen = "src.ingest.witzenhausen:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
